# SmartinboxRL

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  RUNNING.md  app.py  baseline_openai.py  baseline_results.json  docker-compose.yml  entrypoint.sh  evaluate.py  final_audit.py  hf_final_deploy.py  implementation_plan.md  inference.py  main.py  models.py  modify_app.py  openenv.yaml  pyproject.toml  requirements.txt  utils.py  validate.py  verify_openenv.py
.streamlit/: config.toml
adapters/: CLAUDE.md  GEMINI.md  GPT_OSS.md
agents/: __init__.py  base_agent.py  llm_agent.py  random_agent.py  rl_agent.py  rule_agent.py  simple_rl_agent.py
data/: noise_profiles.json  training_log.json
data/tasks/: easy_tasks.json  enron_tasks.json  hard_tasks.json  medium_tasks.json
environment/: __init__.py  action_space.py  email_loader.py  inbox_env.py  state.py
rewards/: __init__.py  embedding_scorer.py  penalty_system.py  reward_engine.py
scripts/: fetch_and_label_enron.py
server/: app.py
tests/: __init__.py  grader_validation.py  hackathon_validator_sim.py  test_action_space.py  test_rewards.py  test_score_bounds.py
training/: __init__.py  train.py
