[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "smartinboxrl"
version = "1.0.0"
description = "OpenEnv-compliant RL environment for email triage with LLM agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["reinforcement-learning", "email-triage", "openenv", "gymnasium", "llm"]
authors = [
  { name = "Arpit Jain" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "gymnasium>=0.29.0",
  "pydantic>=2.0.0",
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "streamlit>=1.30.0",
  "fastapi>=0.109.0",
  "uvicorn>=0.27.0",
  "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/arpit-jain/SmartInboxRL"
Repository = "https://github.com/Arpitjain1903/SmartinboxRL"

[tool.setuptools.packages.find]
where = ["."]
include = ["environment*", "agents*", "rewards*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]
